/***********************************************************************
X3 ChangeLog

2007-02-05  Alex Schumann  <rubin@afternet.org>

        * src/x3ldap.c: Beginnings of ldap authentication support

	* src/x3ldap.h: Beginnings of ldap authentication support

	* src/nickserv.h: Move config struct to .h so ldap.c can see it too

	* src/nickserv.c: Beginnings of ldap authentication support

	* x3.conf.example: ldap config settings

	* src/md5.c: remove old debugging printf() code

	* src/configure.in: add --enable-ldap support to configure

	* configure: rebuilt from above

	* src/Makefile.am: add --enable-ldap support to configure

	* src/Makefile.in: rebuilt from above


2007-02-04 Neil Spierling  <sirvulcan@gmail.com>

	* src/hash.c: Bug fix for bug #1651561.

2007-02-01 Neil Spierling  <sirvulcan@gmail.com>

	* src/nickserv.c: Fixed bug #1649326.

2007-01-28  Alex Schumann  <rubin@afternet.org>
        
	* src/mod-memoserv.c: if you bind memoserv commands to chanserv's
	nick, and someone sends a memo, send them the memo from memoserv, if
	there is a memoserv (not chanserv).  Also, make the mini-help prompts
	more generic, for when they come from another bot besides memoserv.

2007-01-15  Neil Spierling  <sirvulcan@gmail.com>

	* src/proto-p10.c: RPING support.

2007-01-15  Neil Spierling  <sirvulcan@gmail.com>

	* src/proto-p10.c: This will hide annoying rping/rping error messages
	from the o3 alert channel when denora is linked. Will write proper
	functions when i figure out how rping n rpong works.

2007-01-15  Neil Spierling  <sirvulcan@gmail.com>

	* src/spamserv.c: As kNode points to an entry in killed_users_dict,
	we need to free kNode before removing the entry. Fixed a nasty
	glibc core.

2007-01-12  Alex Schumann   <rubin@afternet.org>

        * src/mod-helpserv.c: This module is coded very poorly, with lots of
	newby c mistakes with pointers and malloc and whatnot. This fixes some
	small part of that so that user commands work again, and to reduce