@@ -1,6 +1,13 @@
 /***********************************************************************
 X3 ChangeLog
 
+2007-02-06 Neil Spierling  <sirvulcan@gmail.com>
+
+	* src/x3ldap.c: Added GPL header, also change the printf's to
+	log_module's as per one of the todo comments.
+
+	* src/x3ldap.h: Added GPL header.
+
 2007-02-05  Alex Schumann  <rubin@afternet.org>
 
         * src/x3ldap.c: Beginnings of ldap authentication support
